SDKs/googleapis.com/jobs/v4/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.JobsProjectsTenantsClientEventsCreateRequest(
    security=operations.JobsProjectsTenantsClientEventsCreateSecurity(
        option1=operations.JobsProjectsTenantsClientEventsCreateSecurityOption1(
            oauth2=shared.SchemeOauth2(
                authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
            )
            oauth2c=shared.SchemeOauth2c(
                authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
            )
        ),
    ),
    path_params=operations.JobsProjectsTenantsClientEventsCreatePathParams(
        parent="in",
    ),
    query_params=operations.JobsProjectsTenantsClientEventsCreateQueryParams(
        dollar_xgafv="2",
        access_token="et",
        alt="json",
        callback="minus",
        fields="delectus",
        key="adipisci",
        oauth_token="id",
        pretty_print=True,
        quota_user="ipsam",
        upload_type="similique",
        upload_protocol="facere",
    ),
    request=shared.ClientEvent(
        create_time="voluptatem",
        event_id="quo",
        event_notes="omnis",
        job_event=shared.JobEvent(
            jobs=[
                "id",
            ],
            type="VIEW_REDIRECT",
        ),
        request_id="aut",
    ),
)
    
res = s.projects.jobs_projects_tenants_client_events_create(req)

if res.client_event is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### projects

* `jobs_projects_tenants_client_events_create` - Report events issued when end user interacts with customer's application that uses Cloud Talent Solution. You may inspect the created events in [self service tools](https://console.cloud.google.com/talent-solution/overview). [Learn more](https://cloud.google.com/talent-solution/docs/management-tools) about self service tools.
* `jobs_projects_tenants_companies_create` - Creates a new company entity.
* `jobs_projects_tenants_companies_list` - Lists all companies associated with the project.
* `jobs_projects_tenants_complete_query` - Completes the specified prefix with keyword suggestions. Intended for use by a job search auto-complete search box.
* `jobs_projects_tenants_create` - Creates a new tenant entity.
* `jobs_projects_tenants_jobs_batch_create` - Begins executing a batch create jobs operation.
* `jobs_projects_tenants_jobs_batch_delete` - Begins executing a batch delete jobs operation.
* `jobs_projects_tenants_jobs_batch_update` - Begins executing a batch update jobs operation.
* `jobs_projects_tenants_jobs_create` - Creates a new job. Typically, the job becomes searchable within 10 seconds, but it may take up to 5 minutes.
* `jobs_projects_tenants_jobs_delete` - Deletes the specified job. Typically, the job becomes unsearchable within 10 seconds, but it may take up to 5 minutes.
* `jobs_projects_tenants_jobs_get` - Retrieves the specified job, whose status is OPEN or recently EXPIRED within the last 90 days.
* `jobs_projects_tenants_jobs_list` - Lists jobs by filter.
* `jobs_projects_tenants_jobs_patch` - Updates specified job. Typically, updated contents become visible in search results within 10 seconds, but it may take up to 5 minutes.
* `jobs_projects_tenants_jobs_search` - Searches for jobs using the provided SearchJobsRequest. This call constrains the visibility of jobs present in the database, and only returns jobs that the caller has permission to search against.
* `jobs_projects_tenants_jobs_search_for_alert` - Searches for jobs using the provided SearchJobsRequest. This API call is intended for the use case of targeting passive job seekers (for example, job seekers who have signed up to receive email alerts about potential job opportunities), it has different algorithmic adjustments that are designed to specifically target passive job seekers. This call constrains the visibility of jobs present in the database, and only returns jobs the caller has permission to search against.
* `jobs_projects_tenants_list` - Lists all tenants associated with the project.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
